--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -64,9 +64,14 @@ body {
   transition: opacity 0.6s;
 }
 
+.fadeout-title {
+  transition: opacity 0.2s;
+}
+
 header {
   height: 100vh;
   overflow: hidden;
+  position: relative;
 }
 
 #main-header, #right-header, #language-select {
@@ -122,8 +127,20 @@ header {
   }
 }
 
+#main-title {
+  font-family: Geneva, Tahoma, sans-serif;
+  font-size: 4rem;
+  font-weight: 400;
+  position: absolute;
+  bottom: 0;
+  padding: 2rem;
+  color: white;
+}
+
+
+
 main {
   outline: 1px solid red;
-  height: 3rem;
+  height: 30rem;
   width: 100%;
 }
