--- a/vite-project/style.css
+++ b/vite-project/style.css
@@ -137,10 +137,27 @@ header {
   color: white;
 }
 
-
-
 main {
-  outline: 1px solid red;
   height: 30rem;
   width: 100%;
+}
+
+#container-one {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Geneva, Tahoma, sans-serif;
+  text-align: center;
+
+  h1 {
+    font-size: 4rem;
+    font-weight: 200;
+    line-height: 1;
+    margin-bottom: 2rem;
+  }
+  h4 {
+    margin-bottom: 2rem;
+    font-weight: 100;
+  }
 }
